--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -363,6 +363,10 @@ figure[data-rehype-pretty-code-figure] {
   }
 }
 
+code:has(> .mermaid) {
+  overflow-x: hidden;
+}
+
 pre {
   font-family: var(--codeFont);
   padding: 0 0.5rem;
@@ -383,7 +387,6 @@ pre {
     counter-increment: line 0;
     display: grid;
     padding: 0.5rem 0;
-    overflow-x: scroll;
 
     & [data-highlighted-chars] {
       background-color: var(--highlight);
