--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -1,4 +1,17 @@
-button#toc {
+@use "../../styles/variables.scss" as *;
+
+.toc {
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
+  min-height: 1.4rem;
+  flex: 0 0.5 auto;
+  &:has(button.toc-header.collapsed) {
+    flex: 0 1 1.4rem;
+  }
+}
+
+button.toc-header {
   background-color: transparent;
   border: none;
   text-align: left;
@@ -27,11 +40,6 @@ button#toc {
 
 ul.toc-content.overflow {
   list-style: none;
-  overflow: hidden;
-  max-height: none;
-  transition:
-    max-height 0.5s ease,
-    visibility 0s linear 0s;
   position: relative;
   margin: 0.5rem 0;
   padding: 0;
@@ -39,30 +47,14 @@ ul.toc-content.overflow {
   overscroll-behavior: contain;
   list-style: none;
 
-  &.collapsed {
+  & > li > a {
+    color: var(--dark);
+    opacity: 0.35;
     transition:
-      max-height 0.5s ease,
-      visibility 0s linear 0.5s;
-    visibility: hidden;
-  }
-
-  &.collapsed > .overflow::after {
-    opacity: 0;
-  }
-
-  & ul {
-    list-style: none;
-    margin: 0.5rem 0;
-    padding: 0;
-    & > li > a {
-      color: var(--dark);
-      opacity: 0.35;
-      transition:
-        0.5s ease opacity,
-        0.3s ease color;
-      &.in-view {
-        opacity: 0.75;
-      }
+      0.5s ease opacity,
+      0.3s ease color;
+    &.in-view {
+      opacity: 0.75;
     }
   }
 
