--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -30,3 +30,8 @@ table {
   background-size: 1.5rem 1.5rem;
   background-position: left center;
 }
+
+.vp-doc h1 {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
