--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -5,6 +5,11 @@
   'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
 }
 
+.mermaid {
+  display: flex;
+  justify-content: center;
+}
+
 table {
   max-width: 100% !important;
   width: 100% !important;
